# inventory

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  package.json
client/: CMakeLists.txt
client/include/: CInventoryClient.h
client/src/: CInventoryClient.cpp  main.cpp
resources/: resources.in.rc
resources/proto/: CMakeLists.txt  InventoryAPI.proto
server/: CMakeLists.txt
server/include/: CInventoryServer.h  TStreamingGenerator.h
server/src/: CInventoryServer.cpp  main.cpp
